...
            textField.inputView = countryPickerView
            countryPickerView.tag = textField.tag
            countryPickerView.delegate = self
            countryPickerView.dataSource = self
            
            let toolbar = UIToolbar(frame: CGRect(x: 0, y: 0, width: UIScreen.main.bounds.width, height: 44))
            let cancelBarButton = UIBarButtonItem(title: "Cancel", style: .plain, target: self, action: #selector(toolbarCancelButtonTapped(_:)))
            let flexWidth = UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: nil, action: nil)
            let submitButton = UIBarButtonItem(title: "Submit", style: .done, target: self, action: #selector(toolbarSubmitButtonTapped(_:)))
            toolbar.items = [cancelBarButton, flexWidth, submitButton]
            textField.inputAccessoryView = toolbar
            
        default:
            break
        }
...
